change overflow wrap to avoid strange breaking in narrow table columns

--- a/src/less/include/base.less
+++ b/src/less/include/base.less
@@ -126,6 +126,7 @@ select {
 
 table {
   border-collapse: collapse;
+  overflow-wrap: break-word;
 }
 
 var {
